# lh

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/: default.toml  event_tuned.toml  event_tuned_dynamic_sizing.toml  event_tuned_dynamic_sizing_light.toml  event_tuned_market_exit.toml  event_tuned_market_filter.toml  local.example.toml
docs/: tushare_init.md
dragon_backtest/: __init__.py  alerts.py  artifacts.py  backtester.py  broker.py  cli.py  config.py  data.py  data_check.py  data_fix.py  event_study.py  features.py  labels.py  minishare_source.py  parameter_sweep.py  performance.py  regime_analysis.py  reporting.py  sample_data.py  signals.py  tushare_client.py  tushare_source.py
reports/: event_tuned_regime_summary.md
scripts/: fetch_minishare_mins.ps1  fetch_tushare_and_backtest.ps1  run_dashboard.ps1  run_sample_confirmed.ps1
tests/: test_artifacts.py  test_broker_capacity.py  test_broker_rules.py  test_config_validation.py  test_data_check_core.py  test_data_check_point_in_time.py  test_feature_cache.py  test_minute_confirmed_backtest.py  test_no_lookahead.py  test_walk_forward.py
