[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon-backtest-lh"
version = "0.1.0"
description = "A-share dragon leader potential backtesting toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "tushare>=1.4",
  "minishare",
  "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[project.scripts]
lh = "dragon_backtest.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dragon_backtest*"]

